# chatbot

./: .gitignore  README.md  TECHNICAL_DESIGN.md
.github/workflows/: app-ci.yml  kb-ingest.yml
chat-api/: pom.xml
chat-api/src/main/java/com/netcourier/chatbot/: ChatApiApplication.java
chat-api/src/main/java/com/netcourier/chatbot/config/: WebClientConfig.java
chat-api/src/main/java/com/netcourier/chatbot/controller/: ChatController.java  GlobalExceptionHandler.java  IngestionController.java
chat-api/src/main/java/com/netcourier/chatbot/model/: ChatContext.java  ChatEvent.java  ChatEventType.java  ChatMessage.java  ChatMessageRole.java  ChatRequest.java  ChatRequestFactory.java  ChatResponse.java  ChatSubmission.java  ChatSubmissionContext.java  ChatTurn.java  Citation.java  IngestTextRequest.java  IngestUploadResponse.java  RetrievalSummary.java  RetrievedChunk.java  ToolCallResult.java  WorkflowResult.java  WorkflowSummary.java
chat-api/src/main/resources/: application.yml  schema.sql
chat-api/src/test/java/com/netcourier/chatbot/: DefaultIntentRouterTest.java
chat-api/src/test/resources/: application-test.yml
chat-widget/: package.json  tsconfig.json  vite.config.ts
chat-widget/src/: netcourier-chatbot.test.ts  netcourier-chatbot.ts
docs/: CI.md  developers-guide.md  local-development-setup.md  netcourier-functional-spec.md  ops-guide.md
embeddings-service/: pyproject.toml
embeddings-service/app/: main.py
embeddings-service/tests/: test_app.py
infra/: docker-compose.yml
scripts/: kb_ingest.py
(+87 files in other folders)
