[project]
name = "netcourier-embeddings"
version = "0.1.0"
description = "Embeddings microservice for NetCourier chatbot"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.6.0",
    "numpy>=1.26.0",
    "sentence-transformers>=2.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0"
]

[tool.uvicorn]
app = "app.main:app"
host = "0.0.0.0"
port = 8000
reload = true
